chatting clients display proper server ip

--- a/pages/chat.mdx
+++ b/pages/chat.mdx
@@ -1,10 +1,11 @@
 import Layout from './components/MDXLayout';
 import { useForm } from 'react-hook-form';
 import DyanmicChatClient from './components/DynamicChatClient';
+import ChatClient from './components/ChatClient';
 
 # How I horizontally scaled my Elixir chat application
-<DyanmicChatClient port={4000}/>
+<DyanmicChatClient port={4000} key={1}/>
 <div className="h-2" />
-<DyanmicChatClient port={4001}/>
+<DyanmicChatClient port={4001} key={2}/>
 
 export default ({ children }) => <Layout>{children}</Layout>
