use scrollto instead of a empty div at the bottom because that ones buggy

--- a/pages/chat.mdx
+++ b/pages/chat.mdx
@@ -143,6 +143,8 @@ If you're interested, here's the full architecture.
 
 Here's the [Elixir Server repo](https://github.com/arthurysong/chatter-api)
 
-Here's the code for the chat client.
+Here's the [code for the chat client](https://gist.github.com/arthurysong/209a344ecef7f33525dbe2aa9536d761).
+
+And here's the [link to my AWS account information so you can check out the all the services used](https://gist.github.com/arthurysong/00f7da7b02ef3367d26e755965a3baab). 
 
 export default ({ children }) => <Layout>{children}</Layout>
